kube/app/03-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: agentapp
  namespace: ai-workshop
  labels:
    app: agentapp
spec:
  type: ClusterIP
  ports:
    - port: 8000
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app: agentapp
